[gd_scene load_steps=11 format=2]

[ext_resource path="res://src/characters/Character.gd" type="Script" id=1]
[ext_resource path="res://assets/art/effects/explosion.png" type="Texture" id=2]




[sub_resource type="StreamTexture" id=1]
load_path = "res://.import/ship.png-9f7dcac29f4b016ca46abac3a8dd91e5.stex"

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/explosion.png-cd01013b443e79bef4529591ef769479.stex"

[sub_resource type="CircleShape2D" id=3]
radius = 7.08885

[sub_resource type="Animation" id=4]
resource_name = "default"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=5]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1.8025 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ExplosionSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.075, 0.15, 0.225, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=6]
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 0.378929, 0.34151, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.552941, 0.160784, 0.160784, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "power-up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("PowerUpSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PowerUpSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=8]
length = 2.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.5, 0.65, 0.9, 1.15, 1.3, 1.55, 1.75, 1.9, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.7411, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 0.427451, 0.427451, 0.427451, 0.745098 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
texture = SubResource( 1 )
vframes = 2
hframes = 5
frame = 2

[node name="PowerUpSprite" type="Sprite" parent="."]
visible = false
modulate = Color( 0.0235294, 0.482353, 0.247059, 1 )
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
offset = Vector2( 0, -5 )
hframes = 5
frame = 4

[node name="ExplosionSprite" type="Sprite" parent="."]
visible = false
scale = Vector2( 4, 4 )
texture = SubResource( 2 )
hframes = 5

[node name="Collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -7.5 )
scale = Vector2( 2.5, 2.5 )
shape = SubResource( 3 )

[node name="CharacterAnimations" type="AnimationPlayer" parent="."]
anims/default = SubResource( 4 )
anims/die = SubResource( 5 )
anims/hit = SubResource( 6 )
anims/power-up = SubResource( 7 )
anims/respawn = SubResource( 8 )

[node name="BulletSpawns" type="Node2D" parent="."]

[node name="BulletSpawn" type="Position2D" parent="BulletSpawns"]
position = Vector2( 0, -35 )
[connection signal="animation_finished" from="CharacterAnimations" to="." method="_on_CharacterAnimations_animation_finished"]
